--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dragos-php-sdk",
+    "name": "dragos/php-sdk",
     "description": "Salesforce Marketing Cloud Fuel SDK for PHP",
     "homepage": "https://developer.salesforce.com/docs/atlas.en-us.mc-sdks.meta/mc-sdks/index-sdk.htm",
     "license": "MIT",
