User specific endpoints (#1)
* Initial changes for user specific endpoints support

* Update .gitignore file

* Update modified docs/files

* [W-5413857] - Bearer Token In Header

* fix auth soap header

* removed some comments

* bumped version

* [W-5500245] - Remove the legacyToken query string parameter support

* Auth, Rest and SOAP endpoints should be made configurable.
If SOAP endpoint is not provided, and if /platform/endpoint call fails, we need to take the default SOAP endpoint.

* Cached SOAP request 10 minutes

* added condition: if the baseSoapUrl is defined but empty assign the default value

* updated Readme.md file

* reverted removal of legacyToken & change from oauth to fueloauth

* Bumped version

* changed package name for testing

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ objsamples/sample-testing.php
 /objsamples/sample-asset-upload.php
 /tests/CampaignAssetTest.php
 /tests/ImportListTest.php
+.vscode
+phpunit-*.phar
+composer.phar
+.idea
+.cache
