--- a/config.php.template
+++ b/config.php.template
@@ -5,7 +5,9 @@ return array(
 	'clientsecret' => 'CCCCCCCCCCCCCCCCCCCCCCC',
 	'defaultwsdl' => 'https://webservice.exacttarget.com/etframework.wsdl',
     'xmlloc' => '/some/path/to/cache/ExactTargetWSDL.xml',
+    'baseUrl' => 'https://www.exacttargetapis.com',
     'baseAuthUrl' => 'https://auth.exacttargetapis.com',
+    'baseSoapUrl' => 'https://webservice.exacttarget.com/Service.asmx',
     'proxyhost' => 'localhost',
     'proxyport' => '8080',
     'proxyusername' => '',
